objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ASI_BRD_Total_No_of_Bottles_Activated__c</fullName>
        <label>Total No. of Bottles Activated</label>
        <summarizedField>CampaignMember.ASI_BRD_No_of_Bottles_Scratch_Win__c</summarizedField>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Fixed_Amount__c</fullName>
        <label>Fixed Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Cible__c</fullName>
        <label>Cible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tout Cognac</fullName>
                </value>
                <value>
                    <fullName>Tout Champagne</fullName>
                </value>
                <value>
                    <fullName>Tout le monde</fullName>
                </value>
                <value>
                    <fullName>Segmentation Champagne</fullName>
                </value>
                <value>
                    <fullName>Segmentation Cognac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Heure_debut__c</fullName>
        <label>Heure de début (hh:mm)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Heure_fin__c</fullName>
        <label>Heure de fin (hh:mm)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Inscription_obligatoire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inscription obligatoire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_Public__c</fullName>
        <label>Lien Public</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lieu__c</fullName>
        <label>Lieu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nb_personnes_accompagnant__c</fullName>
        <inlineHelpText>nombre total d&apos;accompagnants déclarés par les personnes inscrites</inlineHelpText>
        <label>Nombre de personnes accompagnantes</label>
        <summarizedField>CampaignMember.MMPJ_Ext_Accompagnants__c</summarizedField>
        <summaryFilterItems>
            <field>CampaignMember.MMPJ_Ext_Vign_Participation__c</field>
            <operation>equals</operation>
            <value>Accepté</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nb_personnes_inscrites__c</fullName>
        <inlineHelpText>Nombre total d&apos;invités ayant répondu Oui à l&apos;invitation</inlineHelpText>
        <label>Nombre de personnes inscrites</label>
        <summaryFilterItems>
            <field>CampaignMember.MMPJ_Ext_Vign_Participation__c</field>
            <operation>equals</operation>
            <value>Accepté</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nb_total_personnes_prevues__c</fullName>
        <formula>MMPJ_Ext_Vign_Nb_personnes_accompagnant__c + MMPJ_Ext_Vign_Nb_personnes_inscrites__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Somme de personnes inscrites + total des accompagnants</inlineHelpText>
        <label>Nombre total de personnes prévues</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nombre_accompagnant_max__c</fullName>
        <inlineHelpText>conjoint ou autres personnes supplémentaires par invitation</inlineHelpText>
        <label>Nombre d&apos;accompagnant maximum</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Nombre_de_places__c</fullName>
        <inlineHelpText>Accompagnateurs interne compris</inlineHelpText>
        <label>Nombre de places</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Accompagnateur_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accompagnateur 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Accompagnateur_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accompagnateur 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Accompagnateur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accompagnateur 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Date_limite_inscription__c</fullName>
        <inlineHelpText>Les invités pourront s&apos;inscrire via l&apos;email d&apos;invitation jusqu&apos;à cette date, une fois cette date passée, un message leur indiquera que les inscriptions sont fermées</inlineHelpText>
        <label>Date limite d&apos;inscription</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Sous_type__c</fullName>
        <label>Sous type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PSG</fullName>
                </value>
                <value>
                    <fullName>Stade de Reims</fullName>
                    <label>MPJ-Stade de Reims</label>
                </value>
                <value>
                    <fullName>Rubgy</fullName>
                    <label>MPJ-Rubgy</label>
                </value>
                <value>
                    <fullName>Karting</fullName>
                    <label>MPJ-Karting</label>
                </value>
                <value>
                    <fullName>Formule E</fullName>
                    <label>MPJ-Formule E</label>
                </value>
                <value>
                    <fullName>Voile</fullName>
                    <label>MPJ-Voile</label>
                </value>
                <value>
                    <fullName>Jumping</fullName>
                    <label>MPJ-Jumping</label>
                </value>
                <value>
                    <fullName>Espagne</fullName>
                    <label>MPJ-Espagne</label>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                    <label>MPJ-Cognac</label>
                </value>
                <value>
                    <fullName>Vins clairs</fullName>
                    <label>MPJ-Vins clairs</label>
                </value>
                <value>
                    <fullName>Cocktail</fullName>
                    <label>MPJ-Cocktail</label>
                </value>
                <value>
                    <fullName>Repas divers</fullName>
                    <label>MPJ-Repas divers</label>
                </value>
                <value>
                    <fullName>VDC</fullName>
                    <label>MPJ-VDC</label>
                </value>
                <value>
                    <fullName>Les matinales MPJ</fullName>
                    <label>MPJ-Les matinales MPJ</label>
                </value>
                <value>
                    <fullName>Golf</fullName>
                    <label>MPJ-Golf</label>
                </value>
                <value>
                    <fullName>Chasse</fullName>
                    <label>MPJ-Chasse</label>
                </value>
                <value>
                    <fullName>Jumping La Baule</fullName>
                    <label>MPJ-Jumping La Baule</label>
                </value>
                <value>
                    <fullName>Vendée Globe</fullName>
                    <label>MPJ-Vendée Globe</label>
                </value>
                <value>
                    <fullName>Habits de Lumière</fullName>
                    <label>MPJ-Habits de Lumière</label>
                </value>
                <value>
                    <fullName>Trophée Mumm</fullName>
                    <label>MPJ-Trophée Mumm</label>
                </value>
                <value>
                    <fullName>Réunion de printemps Livreurs</fullName>
                    <label>MPJ-Réunion de printemps Livreurs</label>
                </value>
                <value>
                    <fullName>Réunion pré-vendanges Livreurs</fullName>
                    <label>MPJ-Réunion pré-vendanges Livreurs</label>
                </value>
                <value>
                    <fullName>Divers</fullName>
                    <label>MPJ-Divers</label>
                </value>
                <value>
                    <fullName>Cabaret</fullName>
                    <label>MPJ-Cabaret</label>
                </value>
                <value>
                    <fullName>Concert</fullName>
                    <label>MPJ-Concert</label>
                </value>
                <value>
                    <fullName>Théâtre</fullName>
                    <label>MPJ-Théâtre</label>
                </value>
                <value>
                    <fullName>Opéra</fullName>
                    <label>MPJ-Opéra</label>
                </value>
                <value>
                    <fullName>Musée</fullName>
                    <label>MPJ-Musée</label>
                </value>
                <value>
                    <fullName>Expositions</fullName>
                    <label>MPJ-Expositions</label>
                </value>
                <value>
                    <fullName>Défilé de Mode</fullName>
                    <label>MPJ-Défilé de Mode</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>ASI_BRD_MY_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>MYA_</value>
        </filters>
        <label>All ASI Brand Campaign (MY)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_MY_All_Brands_Users</group>
            <group>ASI_LUX_MY_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_BRD_PH_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>PHL_</value>
        </filters>
        <label>All ASI Brand Campaign (PH)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_PH_All_Brands_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_BRD_SG_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>SGN_</value>
        </filters>
        <label>All ASI Brand Campaign (SG)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_SG_All_Brands_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_BRD_TH_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>THA_</value>
        </filters>
        <label>All ASI Brand Campaign (TH)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_TH_All_Brands_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_BRD_VN_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.RECORDTYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>VNM_</value>
        </filters>
        <label>All ASI Brand Campaign (VN)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_BRD_VN_All_Brands_Users</group>
            <roleAndSubordinates>ASI_LUX_Regional_Executive</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Campagnes_MPJ</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>MMPJ_XRM_Sous_type__c</columns>
        <columns>MMPJ_Ext_Vign_Lieu__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMPJ_Ext_Vign_Cible__c</field>
            <operation>equals</operation>
            <value>Tout Champagne,Segmentation Champagne</value>
        </filters>
        <label>Campagnes MPJ</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>MMPJ_Ext_Vign_Cognac</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>MMPJ_Ext_Vign_Cible__c</columns>
        <columns>MMPJ_Ext_Vign_Lieu__c</columns>
        <columns>MMPJ_Ext_Vign_Nombre_de_places__c</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign.MMPJ_Ext_Vign_Campaign</value>
        </filters>
        <label>MMPJ_Ext_Vign</label>
        <language>fr</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>ASI_BRD_Generic_CRM_Campaign</fullName>
        <active>true</active>
        <label>ASI Generic Brand CRM Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_BRD_SG_GHM_Campaign</fullName>
        <active>false</active>
        <description>obsolete on 26 April 2016</description>
        <label>ASI Brand GHM (SG) Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_BRD_SG_TGL_Campaign</fullName>
        <active>false</active>
        <description>obsolete on 26 April 2016</description>
        <label>ASI Brand TGL (SG) Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_HK_Campaign</fullName>
        <active>true</active>
        <label>ASI LUX (HK) Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_JP_Campaign</fullName>
        <active>true</active>
        <label>ASI Brand (JP) Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_MY_Campaign</fullName>
        <active>true</active>
        <label>ASI LUX (MY) Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_Regional_Campaign</fullName>
        <active>true</active>
        <label>ASI LUX (Regional) Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_SG_Campaign</fullName>
        <active>true</active>
        <label>ASI LUX (SG) Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_LUX_TW_Campaign</fullName>
        <active>true</active>
        <label>ASI LUX (TW) Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Campaign</fullName>
        <active>true</active>
        <description>Extranet &amp; XRM Project - MMPJ - Champagne &amp; Cognac</description>
        <label>MMPJ Extranet Vigneron Viticulteur</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>